# SmartAudio-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  RELEASE_NOTES.md  TODO.md  audio_utils.py  audiobook.py  audiobook_tts_pdf.py  character_voice_manager.py  config.py  download_reference_audio.py  emotion_controller.py  install.ps1  pdf_processor.py  pyproject.toml  requirements.txt  tts_engine.py
docs/: CHARACTER_VOICE_GUIDE.md  DEPLOYMENT.md  INSTALL.md  LLM_PROVIDERS.md  QUICKSTART.md  RELEASE_NOTES.md  TROUBLESHOOTING.md
examples/: README.md  advanced_features.py  llm_providers.py
saa/: __init__.py  __main__.py  __version__.py  constants.py  exceptions.py
saa/agents/: __init__.py  agent.py  cleanup_agent.py  extraction_agent.py  merge_agent.py  orchestrator.py  refinement_agent.py  staging_agent.py  voice_generation_agent.py
saa/cli/: __init__.py  app.py
saa/config/: __init__.py  settings.py
saa/evaluation/: __init__.py  evaluator.py
saa/models/: __init__.py  audio_metadata.py  job_state.py  provider_factory.py  text_segment.py  voice_profile.py
saa/observability/: __init__.py  logging_plugin.py
saa/providers/: __init__.py  local_provider.py  replicate_provider.py
saa/sessions/: __init__.py  session_manager.py
saa/tools/: __init__.py  audio_tools.py  document_tools.py  file_tools.py  resume_tools.py  state_tools.py  text_tools.py  toon_adapter.py  tts_tools.py  voice_tools.py
saa/utils/: __init__.py  gpu_monitor.py  logger.py  workspace.py
scripts/: run_saa.ps1
tests/: README.md  conftest.py
tests/integration/: test_pipeline.py
tests/test_data/: README.md
tests/unit/: __init__.py  test_document_tools.py  test_text_tools.py  test_voice_tools.py
